added verbose logging

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "scripts": {
     "build": "nuxt build",
     "dev": "nuxt dev",
-    "generate": "nuxt generate",
+    "generate": "nuxt generate -v",
     "preview": "nuxt preview",
     "postinstall": "nuxt prepare"
   },
