--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "postinstall": "nuxt prepare"
   },
   "dependencies": {
+    "@nuxt/image": "^1.0.0-rc.3",
     "@pinia/nuxt": "^0.4.11",
     "css.gg": "^2.1.1",
     "d3": "^7.6.1",
