BREAKING CHANGE: couplings -> coupling_count. Added git based metrics

--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "lucide": "^0.279.0",
     "lucide-vue": "^0.279.0",
     "lucide-vue-next": "^0.279.0",
+    "luxon": "^3.4.3",
     "marked": "^9.0.3",
     "mitt": "^3.0.1",
     "pinia": "^2.1.6",
@@ -32,7 +33,9 @@
     "@nuxt/devtools": "latest",
     "@nuxtjs/tailwindcss": "^6.8.0",
     "@types/d3": "^7.4.0",
+    "@types/luxon": "^3.3.2",
     "@types/splitpanes": "^2.2.2",
+    "@types/sql.js": "^1.4.5",
     "autoprefixer": "^10.4.8",
     "google-charts": "^2.0.0",
     "nuxt": "^3.7.4",
