--- a/.github/workflows/gcp.yml
+++ b/.github/workflows/gcp.yml
@@ -26,7 +26,7 @@ jobs:
 
         with:
           workload_identity_provider: 'projects/519889038683/locations/global/workloadIdentityPools/github/providers/github'
-          service_account: 'test-gh@archstats.iam.gserviceaccount.com'
+#          service_account: 'test-gh@archstats.iam.gserviceaccount.com'
 
 
       - name: 'List GCS Buckets'
