Comment out service account in GitHub Actions workflow for GCP

--- a/.github/workflows/gcp.yml
+++ b/.github/workflows/gcp.yml
@@ -10,7 +10,7 @@ jobs:
     runs-on: ubuntu-latest
 
     permissions:
-      contents: 'read'
+      contents: 'write'
       id-token: 'write'
 
     steps:
@@ -26,7 +26,7 @@ jobs:
 
         with:
           workload_identity_provider: 'projects/519889038683/locations/global/workloadIdentityPools/github/providers/github'
-#          service_account: 'test-gh@archstats.iam.gserviceaccount.com'
+          service_account: 'test-gh@archstats.iam.gserviceaccount.com'
 
 
       - name: 'List GCS Buckets'
