Add Terraform configuration for Google Cloud Storage and load balancer setup

--- a/.github/workflows/nuxtjs.yml
+++ b/.github/workflows/nuxtjs.yml
@@ -67,7 +67,7 @@ jobs:
       - id: 'upload-folder'
         uses: 'google-github-actions/upload-cloud-storage@v3'
         with:
-          path: '/.output/public'
+          path: '.output/public'
           destination: 'archstats-static-files/main'
 
 
