Set parent option to false in Nuxt.js deployment configuration

--- a/.github/workflows/nuxtjs.yml
+++ b/.github/workflows/nuxtjs.yml
@@ -69,6 +69,7 @@ jobs:
         with:
           path: '.output/public'
           destination: 'archstats-static-files/main'
+          parent: false
 
 
   # Deployment job
